# High-order-sliding-mode-observer

.devcontainer/: devcontainer.json
observer/: package.xml  setup.cfg  setup.py
observer/config/: controller_manager.yaml
observer/launch/: gazebo.launch.py
observer/model/: truck.sdf
observer/observer/: gather_sensors.py  gazebo_model.py  observer.py  robot.py  states.py
observer/observer/utils/: data_plotter.py
observer/rviz/: default.rviz
observer/worlds/: truck_world.sdf
piramide_bringup/: CMakeLists.txt  package.xml
piramide_bringup/config/: joy_truck.yaml
piramide_bringup/launch/: gazebo.launch.xml  joypad_truck.launch.xml
piramide_bringup/urdf/: piramide_truck.xacro
piramide_interfaces/: CMakeLists.txt  package.xml
truck/truck_control/: CMakeLists.txt  package.xml
truck/truck_control/config/: truck8x4_controllers.yaml  truck8x8_controllers.yaml
truck/truck_control/include/truck_control/: truck_controller.hpp
truck/truck_control/launch/: gazebo.launch.xml  truck_control.launch.xml
truck/truck_control/src/: truck_kinematic_control.cpp
truck/truck_control/urdf/: truck8x4_control.ros2control  truck8x8_control.ros2control  truck_control.gazebo  truck_control.xacro
truck/truck_description/: package.xml  setup.cfg  setup.py
truck/truck_description/config/: ros_gz_bridge_gazebo.yaml
truck/truck_description/launch/: display.launch.py  display.launch.xml  gazebo.launch.py
truck/truck_description/meshes/: base_link.stl  left_wheel_axis1_1.stl  left_wheel_axis2_1.stl  left_wheel_axis3_1.stl  left_wheel_axis4_1.stl  osdome_link1_1.stl  osdome_link2_1.stl  osdome_link3_1.stl  ouster_link_1.stl  right_wheel_axis1_1.stl  right_wheel_axis2_1.stl  right_wheel_axis3_1.stl  right_wheel_axis4_1.stl
truck/truck_description/truck_description/: teleop_keyboard.py
truck/truck_description/urdf/: materials.xacro  truck.gazebo  truck.urdf  truck.xacro
truck/truck_plugin_pkg/: CMakeLists.txt  package.xml
truck/truck_plugin_pkg/config/: ros_gz_bridge_gazebo.yaml
truck/truck_plugin_pkg/include/: TruckPlugin.hh
truck/truck_plugin_pkg/launch/: gazebo.launch.xml
truck/truck_plugin_pkg/src/: TruckPlugin.cc
truck/truck_plugin_pkg/urdf/: truck_plugin.plugin  truck_plugin.xacro
truck_controller_pkg/: CMakeLists.txt  package.xml  truck_controller.xml
truck_controller_pkg/config/: ros_gz_bridge_gazebo.yaml  truck8x4_controllers.yaml  truck8x8_controllers.yaml
truck_controller_pkg/include/: TruckController.h
truck_controller_pkg/launch/: gazebo.launch.xml
truck_controller_pkg/src/: TruckController.cpp  truck_controller_parameters.yaml
truck_controller_pkg/urdf/: truck8x4_control.ros2control  truck8x8_control.ros2control  truck_control.gazebo  truck_control.xacro
